objects/PPU_Regional_Tier_Discount__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PPU Regional Tier Discount details.</description>
    <fields>
        <fullName>Bronze__c</fullName>
        <label>Bronze</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gold__c</fullName>
        <label>Gold</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Silver__c</fullName>
        <label>Silver</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>PPU Regional Tier Discount</label>
</CustomObject>